--- a/.github/workflows/warn-on-editing-requirements.yml
+++ b/.github/workflows/warn-on-editing-requirements.yml
@@ -1,4 +1,4 @@
-name: Maintainer approval for requirement edits
+name: Maintainer approval
 
 on:
   pull_request:
@@ -15,26 +15,9 @@ jobs:
         uses: actions/github-script@v7
         with:
           script: |
-            const prNumber = context.payload.pull_request.number;
-            const repo = context.repo;
-            const { data: files } = await github.rest.pulls.listFiles({
-              owner: repo.owner,
-              repo: repo.repo,
-              pull_number: prNumber,
-            });
-
-            const editedPaths = files.map(file => file.filename);
-            const protectedPaths = new Set([
-              "setup.py",
-              "requirements/skinny-requirements.yaml",
-            ]);
-
-            if (editedPaths.some(path => protectedPaths.has(path))) {
-              const script = require(`${process.env.GITHUB_WORKSPACE}/.github/workflows/require-core-maintainer-approval.js`);
-              const reason = (
-                "Editing requirements files can cause conflicts in downstream processes " +
-                "that depend on MLflow. Please ensure that one of the MLflow Core Maintainers " +
-                "has a chance to review this PR, and rerun this workflow once approved."
-              );
-              await script({ context, github, core, reason });
-            }
+            const script = require(`${process.env.GITHUB_WORKSPACE}/.github/workflows/require-core-maintainer-approval.js`);
+            const reason = (
+              "Please ensure that one of the MLflow Core Maintainers " +
+              "has a chance to review this PR, and rerun this workflow once approved."
+            );
+            await script({ context, github, core, reason });
