--- a/.github/workflows/maintainer-approval.yml
+++ b/.github/workflows/maintainer-approval.yml
@@ -1,12 +1,7 @@
 name: Maintainer approval
 
 on:
-  pull_request_target:
-    types:
-      - opened
-  pull_request_review:
-    types:
-      - submitted
+  pull_request:
 
 permissions:
   pull-requests: read
