--- a/.github/actions/setup-python/action.yml
+++ b/.github/actions/setup-python/action.yml
@@ -23,7 +23,7 @@ runs:
         if [ -z "$python_version" ]; then
           python_version=$(cat requirements/python-version.txt)
         fi
-        elif [[ "$python_version" == "3.9" ]]; then
+        if [[ "$python_version" == "3.9" ]]; then
           python_version="3.9.18"
         elif [[ "$python_version" == "3.10" ]]; then
           python_version="3.10.14"
