--- a/.github/actions/setup-python/action.yml
+++ b/.github/actions/setup-python/action.yml
@@ -24,7 +24,9 @@ runs:
           python_version=$(cat requirements/python-version.txt)
         fi
         if [[ "$python_version" == "3.9" ]]; then
-          python_version="3.9.19"
+          # The latest windows-compatible version of Python 3.9 available on github actions
+          # https://raw.githubusercontent.com/actions/python-versions/main/versions-manifest.json
+          python_version="3.9.13"
         elif [[ "$python_version" == "3.10" ]]; then
           python_version="3.10.14"
         else
