Support Langgraph agents
Signed-off-by: aravind-segu <aravind.segu@databricks.com>

--- a/mlflow/ml-package-versions.yml
+++ b/mlflow/ml-package-versions.yml
@@ -667,6 +667,7 @@ langchain:
           "numexpr",
           "hf_transfer",
           "langchain-core!=0.1.39", # https://github.com/langchain-ai/langchain/issues/19947
+          "langgraph",
         ]
       ">= 0.2": ["langchain-huggingface"]
       # We cannot use install langchain-openai with langchain >= 0.2.0, while pinning openai to <1.8.0
