--- a/pyproject.toml
+++ b/pyproject.toml
@@ -69,8 +69,8 @@ extras = [
   "azureml-core>=1.2.0",
   "pysftp",
   "kubernetes",
-  "mlserver>=1.2.0,!=1.3.1,<1.4.0",
-  "mlserver-mlflow>=1.2.0,!=1.3.1,<1.4.0",
+  "mlserver>=1.2.0,!=1.3.1",
+  "mlserver-mlflow>=1.2.0,!=1.3.1",
   "virtualenv",
   "prometheus-flask-exporter",
 ]
