--- a/pyproject.toml
+++ b/pyproject.toml
@@ -63,8 +63,8 @@ file = "LICENSE.txt"
 extras = [
   "pyarrow",
   "requests-auth-aws-sigv4",
-  "boto3",
-  "botocore",
+  "boto3>=1.34.155",
+  "botocore>=1.34.155",
   "google-cloud-storage>=1.30.0",
   "azureml-core>=1.2.0",
   "pysftp",
