--- a/mlflow/ml-package-versions.yml
+++ b/mlflow/ml-package-versions.yml
@@ -714,6 +714,7 @@ llama_index:
     module_name: "llama_index.core"
     install_dev: |
       pip install git+https://github.com/run-llama/llama_index.git
+      pip install git+https://github.com/run-llama/llama_index.git#egg=llama-index-llms-openai-like\&subdirectory=llama-index-integrations/llms/llama-index-llms-openai-like
   models:
     # New event/span framework is fully implemented in 0.10.44
     minimum: "0.10.44"
