--- a/mlflow/ml-package-versions.yml
+++ b/mlflow/ml-package-versions.yml
@@ -715,6 +715,7 @@ llama_index:
     install_dev: |
       pip install git+https://github.com/run-llama/llama_index.git
       pip install git+https://github.com/run-llama/llama_index.git#egg=llama-index-llms-openai-like\&subdirectory=llama-index-integrations/llms/llama-index-llms-openai-like
+      pip install git+https://github.com/run-llama/llama_index.git#egg=llama-index-vector-stores-qdrant\&subdirectory=llama-index-integrations/vector_stores/llama-index-vector-stores-qdrant
   models:
     # New event/span framework is fully implemented in 0.10.44
     minimum: "0.10.44"
