--- a/.github/workflows/rerun-cross-version-tests.yml
+++ b/.github/workflows/rerun-cross-version-tests.yml
@@ -28,5 +28,5 @@ jobs:
       - uses: actions/github-script@v7
         with:
           script: |
-            const rerun = require(`${process.env.GITHUB_WORKSPACE}/.github/workflows/rerun.js`);
+            const rerun = require(`${process.env.GITHUB_WORKSPACE}/.github/workflows/rerun-cross-version-tests.js`);
             await rerun({ context, github, workflow_id: "cross-version-tests.yml" });
