--- a/.github/actions/setup-python/action.yml
+++ b/.github/actions/setup-python/action.yml
@@ -23,10 +23,15 @@ runs:
         if [ -z "$python_version" ]; then
           python_version=$(cat requirements/python-version.txt)
         fi
-        if [[ "$python_version" == "3.9" ]]; then
-          # The latest windows-compatible version of Python 3.9 available on github actions
-          # https://raw.githubusercontent.com/actions/python-versions/main/versions-manifest.json
-          python_version="3.9.13"
+        if [[ "$python_version" == "3.8" ]]; then
+          if [ ${{ runner.os }} == "Windows" ]; then
+            # GitHub Actions does not have a Python 3.8.12 binary for Windows as of Oct. 27 2022
+            python_version="3.8.10"
+          else
+            python_version="3.8.18"
+          fi
+        elif [[ "$python_version" == "3.9" ]]; then
+          python_version="3.9.18"
         elif [[ "$python_version" == "3.10" ]]; then
           python_version="3.10.14"
         else
