--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -91,9 +91,7 @@ jobs:
         run: |
           source .venv/bin/activate
           source dev/setup-ssh.sh
-          pytest --splits=${{ matrix.splits }} --group=${{ matrix.group }} --quiet --requires-ssh \
-            --ignore-flavors --ignore=tests/examples --ignore=tests/recipes --ignore=tests/evaluate \
-            --ignore tests/deployments/server tests
+          pytest -s tests/projects/test_virtualenv_projects.py::test_virtualenv_project_execution_no_python_env
 
   database:
     if: github.event_name != 'pull_request' || github.event.pull_request.draft == false
