--- a/mlflow/ml-package-versions.yml
+++ b/mlflow/ml-package-versions.yml
@@ -640,6 +640,19 @@ openai:
     run: |
       pytest tests/openai/test_openai_autolog.py
 
+dspy:
+  package_info:
+    pip_release: "dspy-ai"
+    install_dev: |
+      pip install git+https://github.com/stanfordnlp/dspy.git
+  models:
+    minimum: "2.4.0"
+    maximum: "2.5.0"
+    requirements:
+      ">= 0.0.0": ["openai"]
+    run: |
+      pytest tests/dspy
+
 langchain:
   package_info:
     pip_release: "langchain"
