--- a/pyproject.toml
+++ b/pyproject.toml
@@ -153,6 +153,7 @@ exclude = ["tests", "tests.*"]
 [tool.ruff]
 line-length = 100
 target-version = "py38"
+required-version = "0.6.4"
 force-exclude = true
 extend-include = ["*.ipynb"]
 extend-exclude = [
