--- a/mlflow/ml-package-versions.yml
+++ b/mlflow/ml-package-versions.yml
@@ -620,7 +620,7 @@ transformers:
       "< 4.30.0": ["tensorflow<2.13.0"]
       # Installing `transformers==4.34.1` with `datasets` results in installing `huggingface_hub==0.17.3`.
       # `accelerate>=0.32.0` is incompatible with `huggingface_hub==0.17.3`.
-      "== 4.34.1": ["accelerate<0.32.0"]
+      "== 4.34.1": ["accelerate<0.32.0", "sentence-transformers<3.1.0"]
     run: |
       pytest tests/transformers/test_transformers_autolog.py
 
