--- a/mlflow/ml-package-versions.yml
+++ b/mlflow/ml-package-versions.yml
@@ -705,13 +705,9 @@ langchain:
           "spacy",
           "langchain-core!=0.1.39", # https://github.com/langchain-ai/langchain/issues/19947
           "pytest-asyncio", # for testing runnable async functions patches
-      ]
-      "< 0.3.0": [
-          "langchain_openai<0.2.0",
-      ]
-      ">= 0.3.0": [
-          "langchain-openai>=0.2.0",
-      ]
+        ]
+      "< 0.3.0": ["langchain_openai<0.2.0"]
+      ">= 0.3.0": ["langchain-openai>=0.2.0"]
     run: |
       pytest tests/langchain/test_langchain_autolog.py
       # test both pydantic v1 and v2
