--- a/mlflow/ml-package-versions.yml
+++ b/mlflow/ml-package-versions.yml
@@ -482,6 +482,8 @@ pmdarima:
       "< 1.9": ["scikit-learn<1.3"]
       # Avoid holidays 0.25 due to https://github.com/dr-prodigy/python-holidays/issues/1200
       ">= 0.0.0": ["prophet", "holidays!=0.25"]
+    python:
+      "== dev": "3.9"
     run: |
       pytest tests/pmdarima/test_pmdarima_model_export.py
 
