--- a/pyproject.toml
+++ b/pyproject.toml
@@ -69,8 +69,6 @@ extras = [
   "azureml-core>=1.2.0",
   "pysftp",
   "kubernetes",
-  "mlserver>=1.2.0,!=1.3.1,<1.4.0",
-  "mlserver-mlflow>=1.2.0,!=1.3.1,<1.4.0",
   "virtualenv",
   "prometheus-flask-exporter",
 ]
@@ -80,6 +78,7 @@ databricks = [
   "boto3>1",
   "botocore",
 ]
+mlserver = ["mlserver>=1.2.0,!=1.3.1", "mlserver-mlflow>=1.2.0,!=1.3.1"]
 gateway = [
   "pydantic<3,>=1.0",
   "fastapi<1",
