--- a/mlflow/ml-package-versions.yml
+++ b/mlflow/ml-package-versions.yml
@@ -706,7 +706,11 @@ langchain:
           "pytest-asyncio", # for testing runnable async functions patches
         ]
       "< 0.3.0": ["langchain_openai<0.2.0"]
-      ">= 0.3.0": ["langchain-openai>=0.2.0"]
+      ">= 0.3.0": [
+          # Need to bump FasAPI version to support pydantic v2
+          "fastapi>=0.100.0",
+          "langchain-openai>=0.2.0",
+        ]
     run: |
       pytest tests/langchain/test_langchain_autolog.py
       # test both pydantic v1 and v2
@@ -717,7 +721,7 @@ langchain:
         echo "Testing langchain autolog with pydantic v2"
         pytest tests/langchain/test_langchain_autolog.py
       fi
-      pip install langchain-community
+      pip install langchain-community --no-deps
       sleep 10
       pytest tests/langchain/test_langchain_autolog.py
 
