--- a/mlflow/ml-package-versions.yml
+++ b/mlflow/ml-package-versions.yml
@@ -653,14 +653,17 @@ langchain:
       # resulting in a weird module conflict issue.
       pip install './skinny'
       # Run all langchain tests except autologging and evaluation
-      pytest tests/langchain --ignore tests/langchain/test_langchain_autolog.py --ignore tests/langchain/test_langchain_evaluation.py
+      pytest tests/langchain --ignore tests/langchain/test_langchain_autolog.py --ignore tests/langchain/test_langchain_evaluation.py --ignore tests/langchain/test_langchain_model_export.py
       # test both pydantic v1 and v2
       PYDANTIC_VERSION=$(python -c "import pydantic; print(pydantic.__version__)")
       if [[ $PYDANTIC_VERSION == 1.* ]]; then
         pip install 'pydantic>=2' 'fastapi>=0.100.0'
         echo "Testing langchain model export with pydantic v2"
-        pytest tests/langchain --ignore tests/langchain/test_langchain_autolog.py --ignore tests/langchain/test_langchain_evaluation.py
+        pytest tests/langchain --ignore tests/langchain/test_langchain_autolog.py --ignore tests/langchain/test_langchain_evaluation.py --ignore tests/langchain/test_langchain_model_export.py
       fi
+      # test langchain model export requires local spark session, we need to uninstall databricks-connect
+      pip uninstall -y databricks-connect
+      pytest tests/langchain/test_langchain_model_export.py
   autologging:
     minimum: "0.1.0"
     maximum: "0.3.24"
